default to true/false instead of yes/no

--- a/debug_print.yaml
+++ b/debug_print.yaml
@@ -8,7 +8,7 @@
 
 - name: print all hostnames
   hosts: all
-  become: yes
+  become: true
   tasks:
     - debug:
         msg: "hostname is: {{ inventory_hostname }}"
