--- a/backup.yaml
+++ b/backup.yaml
@@ -13,7 +13,7 @@
 
 - name: Backup files
   hosts: all
-  become: yes
+  become: true
   tasks:
     - name: Backup ansible environments
       community.general.archive:
