--- a/bootstrap.yaml
+++ b/bootstrap.yaml
@@ -2,7 +2,7 @@
 
 - name: Set up ansible remote user
   hosts: all
-  become: yes
+  become: true
   vars:
     ansible_user: "{{ bootstrap_username | default('root') }}"
     ansible_ssh_private_key_file: "{{ bootstrap_ssh_private_key_file | default(root_ssh_private_key_file) }}"
@@ -11,31 +11,21 @@
 
 - name: Set up base file system structure
   hosts: all
-  become: yes
+  become: true
   tasks:
-    - name: Mount drives
-      ansible.posix.mount:
-        path: "{{ item.path }}"
-        src: "{{ item.src }}"
-        fstype: "{{ item.fstype | default('ext4') }}"
-        state: mounted
-      loop: "{{ sys_file_system.mounts | default([]) }}"
-    - name: Create system folders
+    - name: Create app folder
       file:
-        path: "{{ item.path }}"
+        path: /app
         state: directory
-      loop: "{{ sys_file_system.dirs | default([]) }}"
-    - name: Create symlinks
-      block:
-        - file:
-            path: "{{ item.path }}"
-            src: "{{ item.src }}"
-            state: link
-          loop: "{{ sys_file_system.links | default([]) }}"
+    - name: Create data folder, default to be owned by nobody
+      file: 
+      loop:
+        - /app
+        - /data
     
 - name: Use official YUM repositories mirrorlist
   hosts: all
-  become: yes
+  become: true
   tasks:
     - name: Find all official repo files
       find:
@@ -64,7 +54,7 @@
 
 - name: Enable additional YUM repositories
   hosts: all
-  become: yes
+  become: true
   tasks:
     - name: Install PowerTools/crb
       dnf:
@@ -78,8 +68,8 @@
         section: crb
         option: enabled
         value: 1
-        no_extra_spaces: yes
-        create: no
+        no_extra_spaces: true
+        create: false
       notify:
         - Refresh dnf cache
     - name: Install EPEL
@@ -94,8 +84,8 @@
         section: epel
         option: enabled
         value: 1
-        no_extra_spaces: yes
-        create: no
+        no_extra_spaces: true
+        create: false
       notify:
         - Refresh dnf cache
   handlers:
@@ -104,7 +94,7 @@
 
 - name: Install and update critical packages 
   hosts: all
-  become: yes
+  become: true
   tasks:
     - name: Install Chinese locale
       dnf:
@@ -121,17 +111,17 @@
         
 - name: Disable ssh login by password and empty passwords
   hosts: all
-  become: yes
+  become: true
   vars:
     sshd:
-      PermitEmptyPasswords: no
-      PasswordAuthentication: no
+      PermitEmptyPasswords: false
+      PasswordAuthentication: false
   roles:
     - role: willshersystems.sshd
 
 - name: Enable TCP BBR congestion control algorithm
   hosts: all
-  become: yes
+  become: true
   tasks:
     - name: Set net.core.default_qdisc = fq
       sysctl:
@@ -146,7 +136,7 @@
 
 - name: Initialize firewalld
   hosts: all
-  become: yes
+  become: true
   tasks:
     - name: Install firewalld
       dnf:
@@ -158,7 +148,7 @@
       ansible.posix.firewalld:
         service: "{{ item.service }}"
         state: "{{ item.rule }}"
-        permanent: yes
+        permanent: true
       loop:
         - service: ssh
           rule: enabled
@@ -171,7 +161,7 @@
     - name: Start firewalld service
       systemd:
         name: firewalld
-        enabled: yes
+        enabled: true
         state: started
       notify:
         - Reload firewalld
@@ -179,13 +169,13 @@
     - name: Reload firewalld
       systemd:
         name: firewalld
-        enabled: yes
+        enabled: true
         state: reloaded
 
 - name: Set up interactive user
   hosts: dev
-  become: yes
+  become: true
   vars:
-    interactive_sudoer: yes
+    interactive_sudoer: true
   roles:
     - role: interactive_access
