--- a/hath.yaml
+++ b/hath.yaml
@@ -2,7 +2,7 @@
 
 - name: Update existing packages
   hosts: hath
-  become: yes
+  become: true
   tasks:
     - name: Update packages
       dnf:
@@ -11,7 +11,7 @@
 
 - name: Set up Docker environment
   hosts: hath
-  become: yes
+  become: true
   roles:
     - role: docker
 
