--- a/roles/__app_user/tasks/main.yaml
+++ b/roles/__app_user/tasks/main.yaml
@@ -14,14 +14,14 @@
     app_user_gid: "{{ getent_passwd[base_user][2] | int + gid_offset | default(uid_offset) | int }}"
 
 - name: Set up app user group
-  become: yes
+  become: true
   group:
     name: "{{ username }}"
     gid: "{{ app_user_gid | int }}"
     state: present
 
 - name: Set up app user
-  become: yes
+  become: true
   user:
     name: "{{ username }}"
     group: "{{ username }}"
@@ -29,6 +29,6 @@
     home: /
     shell: /sbin/nologin
     uid: "{{ app_user_uid | int }}"
-    password_lock: yes
-    system: yes
+    password_lock: true
+    system: true
     state: present
