--- a/roles/nginx/handlers/main.yaml
+++ b/roles/nginx/handlers/main.yaml
@@ -1,5 +1,5 @@
 ---
 - name: Reload nginx
-  become: yes
+  become: true
   become_user: "{{ podman_username }}"
   shell: podman exec {{ nginx_container }} nginx -s reload
