--- a/roles/ansible_access/meta/main.yaml
+++ b/roles/ansible_access/meta/main.yaml
@@ -3,6 +3,7 @@ dependencies:
   - role: user
     username: "{{ ansible_username }}"
     uid: "{{ ansible_uid }}"
+    user_groups: []
     ssh_public_key_file: "{{ ansible_ssh_public_key_file }}"
     sudoer: true
     comment: ansible remote user
