--- a/roles/user/meta/argument_specs.yaml
+++ b/roles/user/meta/argument_specs.yaml
@@ -34,7 +34,8 @@ argument_specs:
         type: list
         elements: str
         required: false
-        default: []
+        default: 
+          - users
         description: additional groups the user belongs to
 
       sudoer:
