--- a/roles/podman/meta/main.yaml
+++ b/roles/podman/meta/main.yaml
@@ -5,6 +5,7 @@ dependencies:
     uid: "{{ podman_uid }}"
     user_groups:
       - systemd-journal
+      - users
     linger: true
     comment: podman user
       
