--- a/roles/interactive_access/meta/argument_specs.yaml
+++ b/roles/interactive_access/meta/argument_specs.yaml
@@ -12,8 +12,7 @@ argument_specs:
         type: str
         required: false
         no_log: true
-        default: !
-        description: password of the user, default to ! (password locked)
+        description: password of the user, default to none (password locked)
 
       interactive_ssh_public_key_file:
         type: str
