set container service config

--- a/roles/acme/tasks/main.yaml
+++ b/roles/acme/tasks/main.yaml
@@ -25,6 +25,9 @@
     state: created
     generate_systemd:
       path: "/home/{{ podman_username }}/.config/systemd/user"
+      new: true
+      no_header: true
+      force: true
 
 - name: Enable and start acme service
   become: true
