--- a/roles/qbittorrent/tasks/main.yaml
+++ b/roles/qbittorrent/tasks/main.yaml
@@ -37,6 +37,9 @@
     healthcheck_retries: 3
     generate_systemd:
       path: "/home/{{ podman_username }}/.config/systemd/user"
+      new: true
+      no_header: true
+      force: true
 
 - name: Enable and start qBittorrent service
   become: true
