--- a/roles/nginx/tasks/main.yaml
+++ b/roles/nginx/tasks/main.yaml
@@ -95,6 +95,9 @@
     healthcheck_retries: 3
     generate_systemd:
       path: "/home/{{ podman_username }}/.config/systemd/user"
+      new: true
+      no_header: true
+      force: true
 
 - name: Start nginx service
   become: true
